src/objects/Template_Page__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Display_Page_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Page Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Image__c</fullName>
        <label>Thumbnail</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Page Template</label><nameField>
        <label>_Page Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Page Templates</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Display_Page_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>